--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,8 +9,8 @@
       <div class="dropdown-content">
         <a routerLink="/pessoa-fisica">Pessoa Física</a>
         <a routerLink="/pessoa-juridica">Pessoa Jurídica</a>
-        <a routerLink="/cadastro-produto">Produto</a>
         <a routerLink="/compras">Compras</a>
+        <a routerLink="/produtos">Produtos</a>
       </div>
     </div>
 
