--- a/src/app/components/compras/compras.component.html
+++ b/src/app/components/compras/compras.component.html
@@ -64,6 +64,10 @@
           </mat-autocomplete>
         </mat-form-field>
 
+         <button mat-icon-button color="primary" (click)="carregarProdutos()">
+          <mat-icon>search</mat-icon>
+        </button>
+
         <!-- Quantidade -->
         <mat-form-field>
           <mat-label>Quantidade</mat-label>
