--- a/src/app/components/compras/compras.component.html
+++ b/src/app/components/compras/compras.component.html
@@ -5,22 +5,22 @@
     <mat-card-title>Dados da Compra</mat-card-title>
     <mat-card-content>
 
-      <!-- Fornecedor com autocomplete -->
       <div class="linha-campos">
-  <mat-form-field>
-    <mat-label>Fornecedor</mat-label>
-    <input type="text" matInput [matAutocomplete]="autoFornecedor" formControlName="fornecedor">
-    <mat-autocomplete #autoFornecedor="matAutocomplete" (optionSelected)="selecionaFornecedor($event.option.value)">
-      <mat-option *ngFor="let f of fornecedoresFiltrados" [value]="f.razaoSocial">
-        {{ f.razaoSocial }} ({{ f.cnpj }})
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
+        <mat-form-field>
+          <mat-label>Fornecedor</mat-label>
+          <input type="text" matInput [matAutocomplete]="autoFornecedor" formControlName="fornecedor">
+          <mat-autocomplete #autoFornecedor="matAutocomplete">
+            <mat-option *ngFor="let f of fornecedoresFiltrados" [value]="f.razaoSocial">
+              {{ f.razaoSocial }} ({{ f.cnpj }})
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
 
-  <button mat-icon-button color="primary" (click)="abrirBuscaFornecedor()">
-    <mat-icon>search</mat-icon>
-  </button>
-</div>
+        <button mat-icon-button color="primary" (click)="abrirBuscaFornecedor()">
+          <mat-icon>search</mat-icon>
+        </button>
+      </div>
+
       <mat-form-field>
         <mat-label>Data da Compra</mat-label>
         <input matInput [matDatepicker]="picker" formControlName="dataCompra">
@@ -38,22 +38,20 @@
         <input matInput formControlName="serieNota">
       </mat-form-field>
 
-    <!--  <mat-form-field>
-        <mat-label>Descrição</mat-label>
-        <textarea matInput formControlName="descricaoNota"></textarea>
-      </mat-form-field> -->
-
     </mat-card-content>
   </mat-card>
 
-  <!-- Itens da compra -->
-  <mat-card>
-    <mat-card-title>Itens da Compra</mat-card-title>
-    <mat-card-content>
+</form>
 
-      <!-- Linha para adicionar itens -->
+<!-- Itens da compra -->
+<mat-card>
+  <mat-card-title>Itens da Compra</mat-card-title>
+  <mat-card-content>
+
+    <form [formGroup]="formItem">
+
       <div class="linha-itens">
-        <!-- Produto -->
+
         <mat-form-field>
           <mat-label>Produto</mat-label>
           <input type="text" matInput [matAutocomplete]="autoProduto" [formControl]="produtoCtrl">
@@ -64,75 +62,92 @@
           </mat-autocomplete>
         </mat-form-field>
 
-         <button mat-icon-button color="primary" (click)="carregarProdutos()">
+        <button mat-icon-button color="primary" (click)="abrirBuscaProduto()">
           <mat-icon>search</mat-icon>
         </button>
 
-        <!-- Quantidade -->
         <mat-form-field>
           <mat-label>Quantidade</mat-label>
-          <input type="number" matInput [(ngModel)]="quantidade">
+          <input type="number" matInput formControlName="quantidade">
         </mat-form-field>
 
-        <!-- Valor Unitário -->
         <mat-form-field>
           <mat-label>Valor Unitário</mat-label>
-          <input type="number" matInput [(ngModel)]="valorUnitario">
+          <input type="number" matInput formControlName="valorUnitario">
         </mat-form-field>
 
-        <!-- Botão Adicionar -->
+        <mat-form-field>
+  <mat-label>Desconto</mat-label>
+  <input type="number" matInput formControlName="desconto" step="0.01" min="0" />
+</mat-form-field>
+
+
+        <mat-form-field>
+          <mat-label>Valor Total</mat-label>
+          <input matInput formControlName="valorTotal" readonly>
+        </mat-form-field>
+
         <button mat-raised-button color="primary" (click)="adicionarItem()">
           Adicionar Item
         </button>
+
       </div>
 
-      <!-- Tabela de Itens -->
-      <table mat-table [dataSource]="dataSourceItens" class="mat-elevation-z8">
-        <ng-container matColumnDef="produto">
-          <th mat-header-cell *matHeaderCellDef>Produto</th>
-          <td mat-cell *matCellDef="let element">{{element.produto.nomeProduto}}</td>
-        </ng-container>
+    </form>
 
-        <ng-container matColumnDef="unidade">
-          <th mat-header-cell *matHeaderCellDef>Unidade</th>
-          <td mat-cell *matCellDef="let element">{{element.produto.unidade}}</td>
-        </ng-container>
+    <table mat-table [dataSource]="dataSourceItens" class="mat-elevation-z8">
+      <ng-container matColumnDef="produto">
+        <th mat-header-cell *matHeaderCellDef>Produto</th>
+        <td mat-cell *matCellDef="let element">{{element.produto.nomeProduto}}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="quantidade">
-          <th mat-header-cell *matHeaderCellDef>Qtd</th>
-          <td mat-cell *matCellDef="let element">{{element.quantidade}}</td>
-        </ng-container>
+      <ng-container matColumnDef="unidade">
+        <th mat-header-cell *matHeaderCellDef>Unidade</th>
+        <td mat-cell *matCellDef="let element">{{element.produto.unidade}}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="valorUnitario">
-          <th mat-header-cell *matHeaderCellDef>Vr.Unit</th>
-          <td mat-cell *matCellDef="let element">{{element.valorUnitario | currency}}</td>
-        </ng-container>
+      <ng-container matColumnDef="quantidade">
+        <th mat-header-cell *matHeaderCellDef>Qtd</th>
+        <td mat-cell *matCellDef="let element">{{element.quantidade}}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="valorTotal">
-          <th mat-header-cell *matHeaderCellDef>Vr.Total</th>
-          <td mat-cell *matCellDef="let element">{{element.valorTotal | currency}}</td>
-        </ng-container>
+      <ng-container matColumnDef="valorUnitario">
+        <th mat-header-cell *matHeaderCellDef>Vr.Unit</th>
+        <td mat-cell *matCellDef="let element">
+          {{element.valorUnitario | currency:'BRL'}}
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="acoes">
-          <th mat-header-cell *matHeaderCellDef>Ações</th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn" (click)="removerItem(element)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+      <ng-container matColumnDef="desconto">
+  <th mat-header-cell *matHeaderCellDef>Desconto</th>
+  <td mat-cell *matCellDef="let element">
+    {{ element.desconto | currency:'BRL':'symbol':'1.2-2' }}
+  </td>
+</ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+      <ng-container matColumnDef="valorTotal">
+        <th mat-header-cell *matHeaderCellDef>Vr.Total</th>
+        <td mat-cell *matCellDef="let element">
+          {{element.valorTotal | currency:'BRL'}}
+        </td>
+      </ng-container>
 
-    </mat-card-content>
-  </mat-card>
+      <ng-container matColumnDef="acoes">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn" (click)="removerItem(element)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-  <!-- Botões finais -->
-  <div class="botoes-finais">
-    <button mat-raised-button color="primary" (click)="salvar()">Salvar</button>
-    <button mat-button>Cancelar</button>
-  </div>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
 
-</form>
+  </mat-card-content>
+</mat-card>
+
+<div class="total-geral">
+  <h3>Total Geral: {{ valorTotalCompra | currency:'BRL':'symbol':'1.2-2' }}</h3>
+</div>
