--- a/src/app/components/dialogs/produtos/busca-produto-dialog.component.html
+++ b/src/app/components/dialogs/produtos/busca-produto-dialog.component.html
@@ -1,21 +1,21 @@
-<h2 mat-dialog-title>Buscar Fornecedor</h2>
+<h2 mat-dialog-title>Buscar Produtos</h2>
 <mat-dialog-content>
 
   <mat-form-field style="width: 100%;">
     <mat-label>Filtrar</mat-label>
-    <input matInput [(ngModel)]="filtro" (input)="aplicarFiltro()" placeholder="Digite nome ou CNPJ">
+    <input matInput [(ngModel)]="filtro" (input)="aplicarFiltro()" placeholder="Digite o nome do produto">
   </mat-form-field>
 
-  <table mat-table [dataSource]="fornecedoresFiltrados" class="mat-elevation-z8">
+  <table mat-table [dataSource]="produtosFiltrados" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="razaoSocial">
-      <th mat-header-cell *matHeaderCellDef>Razão Social</th>
-      <td mat-cell *matCellDef="let f">{{f.razaoSocial}}</td>
+    <ng-container matColumnDef="nomeProduto">
+      <th mat-header-cell *matHeaderCellDef>Nome do Produto</th>
+      <td mat-cell *matCellDef="let f">{{f.nomeProduto}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="cnpj">
-      <th mat-header-cell *matHeaderCellDef>CNPJ</th>
-      <td mat-cell *matCellDef="let f">{{f.cnpj}}</td>
+    <ng-container matColumnDef="unidade">
+      <th mat-header-cell *matHeaderCellDef>Unidade</th>
+      <td mat-cell *matCellDef="let f">{{f.unidade}}</td>
     </ng-container>
 
     <ng-container matColumnDef="acoes">
@@ -25,8 +25,8 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['razaoSocial', 'cnpj', 'acoes']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['razaoSocial', 'cnpj', 'acoes'];"></tr>
+    <tr mat-header-row *matHeaderRowDef="['nomeProduto', 'unidade', 'acoes']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['nomeProduto', 'unidade', 'acoes'];"></tr>
 
   </table>
 
