--- a/src/app/components/compras/compras.component.css
+++ b/src/app/components/compras/compras.component.css
@@ -20,3 +20,10 @@ table {
   gap: 16px;
   justify-content: flex-end;
 }
+
+.botoes-direita {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 10px;
+}
