--- a/src/app/components/compras/compras.component.html
+++ b/src/app/components/compras/compras.component.html
@@ -153,7 +153,7 @@
 </div>
 
 <div style="display: flex; justify-content: flex-end; padding-right: 100px;">
-  <button mat-raised-button color="primary" (click)="adicionarItem()">
+  <button mat-raised-button color="primary" (click)="salvarCompra()">
     Salvar Compra
   </button>
 </div>
