--- a/src/app/components/compras/compras.component.html
+++ b/src/app/components/compras/compras.component.html
@@ -157,3 +157,52 @@
     Salvar Compra
   </button>
 </div>
+
+<!-- TABELA DE COMPRAS REALIZADAS  -->
+<mat-card style="margin-top: 30px;">
+  <mat-card-title>Últimas Compras</mat-card-title>
+  <mat-card-content>
+
+    <table mat-table [dataSource]="dataSourceCompras" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="fornecedor">
+        <th mat-header-cell *matHeaderCellDef>Fornecedor</th>
+        <td mat-cell *matCellDef="let compra">{{ compra.pessoaJuridica?.razaoSocial }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="data">
+        <th mat-header-cell *matHeaderCellDef>Data</th>
+        <td mat-cell *matCellDef="let compra">{{ compra.dataCompra | date: 'dd/MM/yyyy' }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="numeroNota">
+        <th mat-header-cell *matHeaderCellDef>Número NF</th>
+        <td mat-cell *matCellDef="let compra">{{ compra.numeroNota }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="serieNota">
+        <th mat-header-cell *matHeaderCellDef>Série</th>
+        <td mat-cell *matCellDef="let compra">{{ compra.serieNota }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="valorTotal">
+        <th mat-header-cell *matHeaderCellDef>Total</th>
+        <td mat-cell *matCellDef="let compra">{{ compra.valorTotal | currency:'BRL' }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="acoes">
+  <th mat-header-cell *matHeaderCellDef>Ações</th>
+  <td mat-cell *matCellDef="let compra">
+    <button mat-icon-button color="accent" (click)="editarCompra(compra)">
+      <mat-icon>edit</mat-icon>
+    </button>
+  </td>
+</ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumnsCompras"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumnsCompras;"></tr>
+    </table>
+
+  </mat-card-content>
+</mat-card>
