--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,12 +13,19 @@
         <a routerLink="/produtos">Produtos</a>
       </div>
     </div>
+    
+    <a routerLink="/nfe" routerLinkActive="active">
+     <mat-icon>description</mat-icon> Emitir NF-e
+    </a>
 
     <a routerLink="/relatorios">📊 Relatórios</a>
     <a routerLink="/configuracoes">⚙️ Configurações</a>
+    
   </div>
 
   <div class="espaco"></div>
 
   <button (click)="logout()">🚪 Sair</button>
+
+  
 </div>
