--- a/src/app/components/produtos/produto.component.html
+++ b/src/app/components/produtos/produto.component.html
@@ -23,6 +23,11 @@
             <input matInput [(ngModel)]="produto.unidade" name="unidade" required>
           </mat-form-field>
 
+          <mat-form-field appearance="outline">
+            <mat-label>NCM</mat-label>
+            <input matInput [(ngModel)]="produto.ncm" name="ncm" required>
+          </mat-form-field>
+
         </div>
       </mat-tab>
 
