--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,6 +11,7 @@
         <a routerLink="/pessoa-juridica">Pessoa Jurídica</a>
         <a routerLink="/compras">Compras</a>
         <a routerLink="/produtos">Produtos</a>
+        <a routerLink="/ibge">Ibge</a>
       </div>
     </div>
     
