--- a/src/app/components/pessoa-juridica/pessoa-juridica.component.html
+++ b/src/app/components/pessoa-juridica/pessoa-juridica.component.html
@@ -52,6 +52,11 @@
             <mat-label>Email</mat-label>
             <input matInput [(ngModel)]="pessoaJur.email" name="email">
           </mat-form-field>
+          
+          <mat-form-field appearance="outline">
+            <mat-label>Cod IBGE</mat-label>
+            <input matInput [(ngModel)]="pessoaJur.ibge" name="ibge">
+          </mat-form-field>
 
         </div>
       </mat-tab>
