--- a/src/app/components/dialogs/ibge/busca-ibge-dialog.component.html
+++ b/src/app/components/dialogs/ibge/busca-ibge-dialog.component.html
@@ -8,19 +8,19 @@
 
   <table mat-table [dataSource]="estadosFiltrados" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="codIbge">
-      <th mat-header-cell *matHeaderCellDef>Cod Ibge</th>
-      <td mat-cell *matCellDef="let f">{{f.codIbge}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="nomeIbge">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let f">{{f.nomeIbge}}</td>
-    </ng-container>
-
     <ng-container matColumnDef="ufIbge">
       <th mat-header-cell *matHeaderCellDef>UF Ibge</th>
       <td mat-cell *matCellDef="let f">{{f.ufIbge}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="nomeIbge">
+      <th mat-header-cell *matHeaderCellDef>Estado</th>
+      <td mat-cell *matCellDef="let f">{{f.nomeEstado}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="codIbge">
+      <th mat-header-cell *matHeaderCellDef>Cod Ibge</th>
+      <td mat-cell *matCellDef="let f">{{f.codIbge}}</td>
     </ng-container>
 
     <ng-container matColumnDef="acoes">
@@ -30,8 +30,8 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['codIbge', 'nomeIbge','ufIbge', 'acoes']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['codIbge', 'nomeIbge','ufIbge', 'acoes'];"></tr>
+    <tr mat-header-row *matHeaderRowDef="['ufIbge', 'nomeIbge','codIbge', 'acoes']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['ufIbge', 'nomeIbge','codIbge', 'acoes'];"></tr>
 
   </table>
 
