--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,13 +5,21 @@
     <a routerLink="/home">🏠 Home</a>
 
     <div class="dropdown">
-      <a class="dropbtn">📝 Cadastro ▼</a>
+      <a class="dropbtn">📝 Cadastros ▼</a>
       <div class="dropdown-content">
         <a routerLink="/pessoa-fisica">Pessoa Física</a>
         <a routerLink="/pessoa-juridica">Pessoa Jurídica</a>
         <a routerLink="/compras">Compras</a>
         <a routerLink="/produtos">Produtos</a>
         <a routerLink="/ibge">Ibge</a>
+      </div>
+    </div>
+
+        <div class="dropdown">
+      <a class="dropbtn">📝 Movimento ▼</a>
+      <div class="dropdown-content">
+        <a routerLink="/compras">Compras</a>
+        <a routerLink="">Outros</a>
       </div>
     </div>
     
