--- a/src/app/components/produtos/produto.component.html
+++ b/src/app/components/produtos/produto.component.html
@@ -28,6 +28,11 @@
             <input matInput [(ngModel)]="produto.ncm" name="ncm" required>
           </mat-form-field>
 
+          <mat-form-field appearance="fill">
+            <mat-label>CFOP</mat-label>
+            <input matInput [(ngModel)]="produto.ncm" name="cfopEntrada" required>
+          </mat-form-field>
+
           <mat-form-field appearance="outline" matTooltip="CEST - Codigo da Situação Tributária.">
             <mat-label>CEST</mat-label>
             <input matInput [(ngModel)]="produto.ncm" name="ncm" required>
